--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -10,7 +10,7 @@
 
 @keyframes scroll-left {
   100% {
-    translate: calc(-100% + 100vw);
+    translate: calc(-100% + $animation-parent-width);
   }
 }
 
@@ -403,17 +403,14 @@
     background-color: $color-background-secondary;
     border: 2px solid $color-timeline;
   }
-
   18% {
     background-color: $color-blue;
     border: 1px solid $color-blue;
   }
-
   35% {
     background-color: $color-blue;
     border: 1px solid $color-blue;
   }
-
   36% {
     background-color: $color-background-secondary;
     border: 2px solid $color-timeline;
@@ -430,11 +427,11 @@
     border: 1px solid $color-blue;
   }
 
-  55% {
+  54% {
     background-color: $color-blue;
     border: 1px solid $color-blue;
   }
-  56% {
+  55% {
     background-color: $color-background-secondary;
     border: 2px solid $color-timeline;
   }
@@ -454,12 +451,12 @@
     background-color: $color-blue;
     border: 1px solid $color-blue;
   }
-  75% {
+  74% {
     background-color: $color-blue;
     border: 1px solid $color-blue;
   }
 
-  76% {
+  75% {
     background-color: $color-background-secondary;
     border: 2px solid $color-timeline;
   }
@@ -479,7 +476,7 @@
     background-color: $color-background-secondary;
     border: 2px solid $color-timeline;
   }
-  77% {
+  76% {
     background-color: $color-blue;
     border: 1px solid $color-blue;
   }
@@ -503,74 +500,88 @@
   0% {
     opacity: 1;
   }
-  15% {
+  16% {
     opacity: 1;
-    transform: translate(0, 0);
+    //transform: translate(0, 60px);
   }
   17% {
-    transform: translate(0, 60px);
-    opacity: 0;
-  }
-  95% {
-    transform: translate(0, -40px);
-    opacity: 0;
-  }
-  96% {
-    opacity: 0;
-  }
-  100% {
+    //transform: translate(0, 0);
     opacity: 0;
   }
 }
 
 @keyframes swipeTextTwo {
-  0% {
+  17% {
     opacity: 0;
   }
-
-  // 17% {
-  //   opacity: 1;
-  // }
-
-  35% {
-    transform: translate(0, -600px);
-    opacity: 0;
-  }
-  37% {
-    transform: translate(0, -540px);
+  18% {
     opacity: 1;
   }
-  100% {
+  35% {
+    //transform: translate(0, 0);
+    opacity: 1;
+  }
+  36% {
     opacity: 0;
   }
+  // 100% {
+  //   opacity: 0;
+  // }
 }
 
 @keyframes swipeTextThree {
-  0% {
-    opacity: 1;
-  }
-  33% {
-    transform: translate(0, -40px);
-  }
+  // 0% {
+  //   opacity: 0;
+  // }
   36% {
+    //transform: translate(0, 0);
+    opacity: 0;
+  }
+  37% {
     opacity: 1;
   }
-
-  40% {
-    transform: translate(0, 0);
+  54% {
+    //transform: translate(0, 0);
+    opacity: 1;
   }
   55% {
-    transform: translate(0, 0);
+    opacity: 0;
+    //transform: translate(0, 40px);
+  }
+}
+
+@keyframes swipeTextFour {
+  55% {
+    opacity: 0;
+    //transform: translate(0, 60px);
+  }
+  56% {
+    opacity: 1;
+    //transform: translate(0, 60px);
+  }
+  73% {
     opacity: 1;
   }
-
-  57% {
+  74% {
     opacity: 0;
-    transform: translate(0, 60px);
   }
-  100% {
-    transform: translate(0, -120px);
+  // 100% {
+  //   transform: translate(0, -120px);
+  //   opacity: 0;
+  // }
+}
+
+@keyframes swipeTextFive {
+  74% {
     opacity: 0;
+    //transform: translate(0, 60px);
+  }
+  75% {
+    opacity: 1;
+    //transform: translate(0, 60px);
+  }  
+  100% {
+    opacity: 1;
   }
 }
 
@@ -600,12 +611,10 @@
 
 @keyframes trustedbyFadeOut {
   0% {
-    
-    translateY: 0;
+    translatey: 0;
   }
 
   100% {
-    
-    translateY: 0;
+    translatey: 0;
   }
 }
