--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,6 +11,7 @@
     width: 100%;
     height: inherit;
     padding: 50px $padding-lr;
+    border: 1px solid green;
 
     display: flex;
     justify-content: space-between;
