--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -452,14 +452,13 @@
       cursor: pointer;
       border: 1px solid rgb(0, 187, 255);
 
-      &:first-child{ 
-        position: relative;       
+      &:first-child {
+        position: relative;
         bottom: 5px;
       }
 
       &.activeItem {
         min-width: 80px;
-        margin-left: 28px;
         margin-right: 20px;
         scale: (1.5);
         transform-origin: bottom;
@@ -473,8 +472,8 @@
 
     &__item-content {
       width: 100%;
-      height: 350px;
-      overflow-y: hidden;
+      //height: 350px;
+      //overflow-y: hidden;
 
       display: flex;
       flex-direction: row;
@@ -485,7 +484,7 @@
 
     &__item-box {
       flex: 0 1 100%;
-      height: 350px;
+      //height: 350px;
       border: 1px solid rgb(26, 255, 0);
     }
   }
@@ -657,7 +656,7 @@
   }
 
   &__marquee {
-    // width: $animation-parent-width;
+    width: $animation-parent-width;
     padding: 10px;
     margin-bottom: 60px;
     // overflow-x: hidden;
@@ -665,25 +664,28 @@
   }
 
   &__marquee-content {
-    position: relative;
     position: absolute;
     white-space: nowrap;
     opacity: 0.65;
 
     &--first,
     &--third {
-      display: flex;
+      left: 0;
+      padding-right: 50px;
+      display: flex;      
       flex-direction: row;
       gap: 40px;
-      animation: scroll-left 20s linear infinite alternate;
+      animation: scroll-left 40s linear infinite alternate;
     }
 
     &--second,
     &--fourth {
+      right: 0;
+      padding-left: 50px;
       display: flex;
       flex-direction: row-reverse;
       gap: 40px;
-      animation: scroll-right 20s linear infinite alternate;
+      animation: scroll-right 40s linear infinite alternate;
     }
 
     .tool {
