--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -44,9 +44,7 @@
 
   position: relative;
   top: 0;
-  left: 0;
-
-  overflow: hidden;
+  left: 0; 
 
   &__container {
     width: 100%;
@@ -59,12 +57,13 @@
     position: absolute;
     top: 0;
     left: 0;
+    overflow: hidden;
 
     &__wrapper {
       width: 100%;
       height: 100%;
       position: relative;
-      overflow: hidden;
+      //overflow: hidden;
     }
 
     .animated-circle {
@@ -74,8 +73,8 @@
       position: absolute;
       filter: blur(130px);
       opacity: 0.5;
-
       transform: rotate(0) translate(200px) rotate(0);
+      
 
       &--one {
         background-color: $color-aurora-circle-one;
@@ -165,6 +164,7 @@
     width: 100%;
     height: 500px;
     position: relative;
+    overflow: hidden;
 
     .composition-bg {
       height: 500px;
@@ -425,8 +425,7 @@
 
   .carousel-mob {
     &-inner {
-      position: relative;
-      border: 1px solid rgb(234, 0, 255);
+      position: relative;      
     }
 
     .buttons-box {
@@ -449,8 +448,7 @@
     &__item {
       min-width: 80px;
       height: 80px;
-      cursor: pointer;
-      border: 1px solid rgb(0, 187, 255);
+      cursor: pointer;      
 
       &:first-child {
         position: relative;
@@ -478,14 +476,12 @@
       display: flex;
       flex-direction: row;
       justify-content: space-around;
-      flex-wrap: wrap;
-      border: 1px solid red;
+      flex-wrap: wrap;      
     }
 
     &__item-box {
       flex: 0 1 100%;
-      //height: 350px;
-      border: 1px solid rgb(26, 255, 0);
+      //height: 350px;      
     }
   }
 
